# ray-tracer

./: CMakeLists.txt  README.md
src/: canvas.cpp  canvas.h  canvas.hpp  color.cpp  color.h  color.hpp  color.test.cpp  light.cpp  light.h  main.cpp  matrix.hpp  matrix.test.cpp  pointvector.cpp  pointvector.h  ray.cpp  ray.h  ray.hpp  shapes.cpp  shapes.h  shapes.hpp  transformations.cpp  transformations.h  transformations.hpp
tests/: canvas.test.cpp  color.test.cpp  light.test.cpp  matrix.test.cpp  ray.test.cpp  shapes.test.cpp  transformations.test.cpp
